--- a/src/templates/list.hbs
+++ b/src/templates/list.hbs
@@ -16,5 +16,9 @@
                 <div>Delete</div>
             </div>
         </div>
+    {{else}}
+        <div class="lost-map-item grid-1col">
+            No items yet!
+        </div>
     {{/each}}
 </section>
