--- a/src/templates/journal/lost-map-edit.hbs
+++ b/src/templates/journal/lost-map-edit.hbs
@@ -5,7 +5,7 @@
     <div class="form-group">
         <label>{{localize "foundry-getting-lost.sheet.mapImage"}}</label>
         <div class="form-fields">
-            <file-picker name="system.mapImage.src" type="image" value="{{system.mapImage.src}}"></file-picker>
+            <file-picker name="system.mapImage" type="image" value="{{system.mapImage}}"></file-picker>
         </div>
     </div>
     <div class="form-group">
@@ -16,7 +16,7 @@
             </select>
         </div>
         <p class="hint">
-            {{ localize "foundry-getting-lost.sheet.divisions.hint" }}
+            {{ localize "foundry-getting-lost.sheet.divisionsHint" }}
         </p>
     </div>
     <div class="form-group">
