--- a/src/templates/journal/lost-map-edit.hbs
+++ b/src/templates/journal/lost-map-edit.hbs
@@ -22,6 +22,6 @@
     <div class="form-group">
         <label>{{ localize "foundry-getting-lost.sheet.flavorText" }}</label>
     </div>
-    {{ editor editor.content target="system.text.content" button=false editable=editable
+    {{ editor editor.content target="text.content" button=false editable=editable
         engine=editor.engine collaborate=editor.collaborate }}
 </form>
