--- a/src/templates/journal/lost-map-view.hbs
+++ b/src/templates/journal/lost-map-view.hbs
@@ -6,7 +6,7 @@
 <section class="journal-page-content">
     {{#if runReady}}
         <div class="fgl-lost-map-run-wrapper">
-            <button type="button" class="fgl-lost-map-run" data-action="run-map">
+            <button type="button" class="fgl-button" data-action="run-map">
                 {{localize "foundry-getting-lost.run"}}
             </button>
         </div>
